--- a/ballistics/notes/ballistics-notes.tex
+++ b/ballistics/notes/ballistics-notes.tex
@@ -29,3 +29,11 @@ These notes are for a fancy ballistic model.
 \subsection{Simpler model suitable for student use}
 
 \end{document}
+
+%For the ballistics functions, we need the following:
+%A mean and covariance of the shot pattern for a handful of distances.
+%A function to calculate mean and covariance as a function of distance I do the first part of this in my SCRIPT_BallisticsAnalysis.m code by fitting a polynomial to:
+%The x-mean
+%The y-mean
+%The square root of the eigenvalues of the covariance
+%The "angle" of the covariance 
