--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
 v20.4.1, April 2020 -- Precocious Plebe - release candidate 0
 v1.2.0, April 2020 -- Eager Youngster - release candidate 1
 v1.2.2, 7 April 2020 -- Surly Second Class 
+v1.2.3, 8 April 2020 -- Jaded Firstie 
