--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,4 +5,4 @@ v1.2.3, 8 April 2020 -- Jaded Firstie
 v1.2.4, 8 April 2020 -- Shrugging Ensign
 v1.2.5, 8 April 2020 -- Junior Grade
 v1.2.7, 20 April 2020 -- Locked On Lieutenant
-
+v1.2.9, 23 April 2020 -- Lieutenant Commander Data
