--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,3 +6,4 @@ v1.2.4, 8 April 2020 -- Shrugging Ensign
 v1.2.5, 8 April 2020 -- Junior Grade
 v1.2.7, 20 April 2020 -- Locked On Lieutenant
 v1.2.9, 23 April 2020 -- Lieutenant Commander Data
+v1.3.0, 28 April 2020 -- Commander Riker
